...
        app:layout_constraintBottom_toTopOf="@+id/infoLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_to_feelings">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ballsRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
...
